criação da pasta com campeoes

--- a/public/cadastro.html
+++ b/public/cadastro.html
@@ -40,7 +40,7 @@
                 <label for="psw-repeat"><b>Repita a senha</b></label>
                 <input type="password" placeholder="Repita a senha" id="psw_repeat" required>
                 
-                <label for="champ_fav"><b>Campeão favorito</b></label>
+                <!-- <label for="champ_fav"><b>Campeão favorito</b></label>
                 <select id="champion_fav" required>
                     <option value="">Selecione um Campeão</option>
                     <option value="Aphelios"> Aphelios </option>
@@ -51,7 +51,7 @@
                     <option value="Soraka"> Soraka</option>
                     <option value="Taric"> Taric </option>
                     <option value="Zoe"> Zoe </option>
-                </select><hr>
+                </select><hr> -->
 
                 <label>
                     <input type="checkbox" checked="checked" name="remember" style="margin-bottom:15px"> Remember me
