--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,7 @@
         <br><br>
         <div>
             <div class="caixa_campeoes_total">
-                <div class="caixa_campeoes"><a href="aphelios.html">
+                <div class="caixa_campeoes"><a href="campeoes/aphelios.html">
                     <div class="numero_campeao">1/8</div>
                         <img src="assets/img/Campeos/aphelios.jpg" style="width:100%">
                     </a>
@@ -64,7 +64,7 @@
                         <p>A arma dos devotos</p>
                     </div>
                 </div>
-                <div class="caixa_campeoes"><a href="Aurelion.html">
+                <div class="caixa_campeoes"><a href="campeoes/Aurelion.html">
                     <div class="numero_campeao">2/8</div>
                         <img src="assets/img/Campeos/aurelion sol.jpg" style="width:100%">
                     </a>
@@ -73,7 +73,7 @@
                         <p>O forjador de estrelas</p>
                     </div>
                 </div>
-                <div class="caixa_campeoes"><a href="Diana.html">
+                <div class="caixa_campeoes"><a href="campeoes/Diana.html">
                     <div class="numero_campeao">3/8</div>
                         <img src="assets/img/Campeos/Diana.jpg" style="width:100%">
                     </a>
@@ -82,7 +82,7 @@
                         <p>O escárnio da lua</p>
                     </div>
                 </div>
-                <div class="caixa_campeoes"><a href="Leona.html">
+                <div class="caixa_campeoes"><a href="campeoes/Leona.html">
                     <div class="numero_campeao">4/8</div>
                         <img src="assets/img/Campeos/Leona_0.jpg" style="width:100%">
                     </a>
@@ -91,7 +91,7 @@
                         <p>A alvorada radiante</p>
                     </div>
                 </div>
-                <div class="caixa_campeoes"><a href="Pantheon.html">
+                <div class="caixa_campeoes"><a href="campeoes/Pantheon.html">
                     <div class="numero_campeao">5/8</div>
                         <img src="assets/img/Campeos/download (1).jpg" style="width:100%">
                     </a>
@@ -100,7 +100,7 @@
                         <p>lança indestrutível</p>
                     </div>
                 </div>
-                <div class="caixa_campeoes"><a href="Soraka.html">
+                <div class="caixa_campeoes"><a href="campeoes/Soraka.html">
                     <div class="numero_campeao">6/8</div>
                         <img src="assets/img/Campeos/Soraka_0.jpg" style="width:100%">
                     </a>
@@ -109,7 +109,7 @@
                         <p>A filha das estrelas</p>
                     </div>
                 </div>
-                <div class="caixa_campeoes"><a href="Taric.html">
+                <div class="caixa_campeoes"><a href="campeoes/Taric.html">
                     <div class="numero_campeao">7/8</div>
                         <img src="assets/img/Campeos/Taric_0.jpg" style="width:100%">
                     </a>
@@ -118,7 +118,7 @@
                         <p>O escudo de valoran</p>
                     </div>
                 </div>
-                <div class="caixa_campeoes"><a href="Zoe.html">
+                <div class="caixa_campeoes"><a href="campeoes/Zoe.html">
                     <div class="numero_campeao">8/8</div>
                         <img src="assets/img/Campeos/Zoe_0.jpg" style="width:100%">
                     </a>
