--- a/public/index.html
+++ b/public/index.html
@@ -145,6 +145,40 @@
         </div>
 
     </section>
+
+<div>   </div>
+    <footer id="footer" class="footer">
+        <ul class="contato">
+            <li>
+                <h2>CONTATOS</h2>
+            </li><br>
+            <li><a href="#">(11)99999-9999</a></li>
+            <li><a href="#">(11)9999-9999</a></li>
+            <li><a href="#">MoranTech@gmail.com</a></li>
+            <li><a href="#">SuporteMorantech@gmail.com</a></li>
+        </ul>
+        <ul><br><br>
+            <li><a href="#menu">HOME</a></li>
+            <li><a href="#">CALCULADORA FINANCEIRA</a></li>
+            <li><a href="#">ÁREA DO CLIENTE</a></li>
+            <li><a href="#">SOBRE NÓS</a></li>
+            <li><a href="#">PRODUTOS</a></li>
+        </ul>
+        <ul>
+            <li>
+                <h2>Redes Sociais</h2>
+            </li><br>
+            <ul class="redes">
+                <li><a href="#"><i class="fa-brands fa-facebook icones_redes facebook"></a></i></li>
+          
+            
+                <li><a href="#"><i class="fa-brands fa-square-instagram icones_redes instagram"></i></a></li>
+                <li><a target="_blank" href="https://github.com/MoranTechGrupo/Morantech.git"><i class="fa-brands fa-github icones_redes github"></a></i></li>
+                <li><a href="#"><i class="fa-brands fa-linkedin icones_redes linkedin "></a></i></li>
+            </ul>
+
+        </ul>
+    </footer>
 </body>
 
 </html>
