atualização da navbar

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
                 <ul>
                     <li><a href=""><img src="assets/img/mt_targon_emblem.png" style="width: 100px;" alt=""></a></li>
                     <div class="usuario_opcao">
+                        <li><a href="">Sobre Mim</a></li>
                         <li><a href="cadastro.html">Cadastro</a></button>
                         <li><a href="login.html">Login</a></li>
                     </div>
