conteudo dos campeões e usuarios quase finalizados

--- a/public/campeoes/Aurelion.html
+++ b/public/campeoes/Aurelion.html
@@ -14,8 +14,11 @@
             <div class="container">
                 <ul>
                     <li><a href="../index.html"><img src="../assets/img/mt_targon_emblem.png" style="width: 100px;" alt=""></a></li>
-                    <li><a href="../cadastro.html">Cadastro</a></button>
-                    <li><a href="../login.html">Login</a></li>
+                    <div class="usuario_opcao">
+                        <li><button onclick="mudarPaginaProjeto()">Sobre o Projeto</button></li>
+                        <li><button onclick="mudarPaginaCadastro()">Cadastro</button></button>
+                        <li><button onclick="mudarPaginaLogin()">Login</button></li>
+                    </div>
                 </ul>
             </div>
         </nav>
@@ -58,6 +61,18 @@
                     Movido pela tentadora promessa de liberdade e vingança, Aurelion Sol agora espreita Runeterra com uma eterna fúria fervilhante. Certamente será aqui, sobre este mundo, que o equilíbrio cósmico penderá a seu favor uma vez mais, e o universo testemunhará o destino daqueles que ousaram roubar o poder de um forjador de estrelas.</span></p>
         </DIV>
             <button onclick="lerMais()" id="btnLerMais">Ler mais</button>
+    </section>
+    <br><br>
+    <section class="section_historia_auxiliar">
+        <div class="titulo_personagens">
+            <h1>Videos & contos</h1>
+        </div>  
+        <br><br>
+        <div class="Videos">
+            <iframe width="430" height="320" src="https://www.youtube.com/embed/k6nYZc4cZIs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <iframe width="430" height="320" src="https://www.youtube.com/embed/cFRE2afx-ss" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <iframe width="430" height="320" src="https://www.youtube.com/embed/zBSWzBd6t2s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
     </section>
 </body>
 </html>
