--- a/public/index.html
+++ b/public/index.html
@@ -16,9 +16,9 @@
                 <ul>
                     <li><a href=""><img src="assets/img/mt_targon_emblem.png" style="width: 100px;" alt=""></a></li>
                     <div class="usuario_opcao">
-                        <li><a href="">Sobre Mim</a></li>
-                        <li><a href="cadastro.html">Cadastro</a></button>
-                        <li><a href="login.html">Login</a></li>
+                        <li><button onclick="mudarPaginaProjeto()">Sobre o Projeto</button></li>
+                        <li><button onclick="mudarPaginaCadastro()">Cadastro</button></button>
+                        <li><button onclick="mudarPaginaLogin()">Login</button></li>
                     </div>
                 </ul>
             </div>
@@ -46,9 +46,16 @@
                 mortais podem compreender.</p>
 
         </div>
+        <br><br>
+        <div>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/v0ZCCgePp3E?start=60"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen></iframe>
+        </div>
 
     </section>
-
+    <br><br>
     <section class="section_personagens">
         <div class="titulo_personagens">
             <h1> Campeões de Targon</h1>
@@ -57,7 +64,7 @@
         <div>
             <div class="caixa_campeoes_total">
                 <div class="caixa_campeoes"><a href="campeoes/aphelios.html">
-                    <div class="numero_campeao">1/8</div>
+                        <div class="numero_campeao">1/8</div>
                         <img src="assets/img/Campeos/aphelios.jpg" style="width:100%">
                     </a>
                     <div class="container_campeoes">
@@ -66,7 +73,7 @@
                     </div>
                 </div>
                 <div class="caixa_campeoes"><a href="campeoes/Aurelion.html">
-                    <div class="numero_campeao">2/8</div>
+                        <div class="numero_campeao">2/8</div>
                         <img src="assets/img/Campeos/aurelion sol.jpg" style="width:100%">
                     </a>
                     <div class="container_campeoes">
@@ -75,7 +82,7 @@
                     </div>
                 </div>
                 <div class="caixa_campeoes"><a href="campeoes/Diana.html">
-                    <div class="numero_campeao">3/8</div>
+                        <div class="numero_campeao">3/8</div>
                         <img src="assets/img/Campeos/Diana.jpg" style="width:100%">
                     </a>
                     <div class="container_campeoes">
@@ -84,7 +91,7 @@
                     </div>
                 </div>
                 <div class="caixa_campeoes"><a href="campeoes/Leona.html">
-                    <div class="numero_campeao">4/8</div>
+                        <div class="numero_campeao">4/8</div>
                         <img src="assets/img/Campeos/Leona_0.jpg" style="width:100%">
                     </a>
                     <div class="container_campeoes">
@@ -93,7 +100,7 @@
                     </div>
                 </div>
                 <div class="caixa_campeoes"><a href="campeoes/Pantheon.html">
-                    <div class="numero_campeao">5/8</div>
+                        <div class="numero_campeao">5/8</div>
                         <img src="assets/img/Campeos/download (1).jpg" style="width:100%">
                     </a>
                     <div class="container_campeoes">
@@ -102,7 +109,7 @@
                     </div>
                 </div>
                 <div class="caixa_campeoes"><a href="campeoes/Soraka.html">
-                    <div class="numero_campeao">6/8</div>
+                        <div class="numero_campeao">6/8</div>
                         <img src="assets/img/Campeos/Soraka_0.jpg" style="width:100%">
                     </a>
                     <div class="container_campeoes">
@@ -111,7 +118,7 @@
                     </div>
                 </div>
                 <div class="caixa_campeoes"><a href="campeoes/Taric.html">
-                    <div class="numero_campeao">7/8</div>
+                        <div class="numero_campeao">7/8</div>
                         <img src="assets/img/Campeos/Taric_0.jpg" style="width:100%">
                     </a>
                     <div class="container_campeoes">
@@ -120,7 +127,7 @@
                     </div>
                 </div>
                 <div class="caixa_campeoes"><a href="campeoes/Zoe.html">
-                    <div class="numero_campeao">8/8</div>
+                        <div class="numero_campeao">8/8</div>
                         <img src="assets/img/Campeos/Zoe_0.jpg" style="width:100%">
                     </a>
                     <div class="container_campeoes">
@@ -142,45 +149,12 @@
                 <span class="dot" onclick="currentSlide(6)"></span>
                 <span class="dot" onclick="currentSlide(7)"></span>
                 <span class="dot" onclick="currentSlide(8)"></span>
-              </div>
+            </div>
         </div>
 
     </section>
 
-<div>   </div>
-    <footer id="footer" class="footer">
-        <ul class="contato">
-            <li>
-                <h2>CONTATOS</h2>
-            </li><br>
-            <li><a href="#">(11)99999-9999</a></li>
-            <li><a href="#">(11)9999-9999</a></li>
-            <li><a href="#">MoranTech@gmail.com</a></li>
-            <li><a href="#">SuporteMorantech@gmail.com</a></li>
-        </ul>
-        <ul><br><br>
-            <li><a href="#menu">HOME</a></li>
-            <li><a href="#">CALCULADORA FINANCEIRA</a></li>
-            <li><a href="#">ÁREA DO CLIENTE</a></li>
-            <li><a href="#">SOBRE NÓS</a></li>
-            <li><a href="#">PRODUTOS</a></li>
-        </ul>
-        <ul>
-            <li>
-                <h2>Redes Sociais</h2>
-            </li><br>
-            <ul class="redes">
-                <li><a href="#"><i class="fa-brands fa-facebook icones_redes facebook"></a></i></li>
-          
-            
-                <li><a href="#"><i class="fa-brands fa-square-instagram icones_redes instagram"></i></a></li>
-                <li><a target="_blank" href="https://github.com/MoranTechGrupo/Morantech.git"><i class="fa-brands fa-github icones_redes github"></a></i></li>
-                <li><a href="#"><i class="fa-brands fa-linkedin icones_redes linkedin "></a></i></li>
-            </ul>
-
-        </ul>
-    </footer>
-</body>
+    <div> </div>
 
 </html>
 
