--- a/public/campeoes/Zoe.html
+++ b/public/campeoes/Zoe.html
@@ -15,10 +15,12 @@
         <nav class="menu">
             <div class="container">
                 <ul>
-                    <li><a href="../index.html"><img src="../assets/img/mt_targon_emblem.png" style="width: 100px;"
-                                alt=""></a></li>
-                    <li><a href="../cadastro.html">Cadastro</a></button>
-                    <li><a href="../login.html">Login</a></li>
+                    <li><a href="../index.html"><img src="../assets/img/mt_targon_emblem.png" style="width: 100px;" alt=""></a></li>
+                    <div class="usuario_opcao">
+                        <li><button onclick="mudarPaginaProjeto()">Sobre o Projeto</button></li>
+                        <li><button onclick="mudarPaginaCadastro()">Cadastro</button></button>
+                        <li><button onclick="mudarPaginaLogin()">Login</button></li>
+                    </div>
                 </ul>
             </div>
         </nav>
@@ -100,6 +102,13 @@
         </DIV>
         <button onclick="lerMais()" id="btnLerMais">Ler mais</button>
     </section>
+    <br><br>
+    <div class="Videos">
+        <iframe width="430" height="320" src="https://www.youtube.com/embed/ACQXVnsShZY?start=60" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <iframe width="430" height="320" src="https://www.youtube.com/embed/O5dLW6voilE?start=60" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <iframe width="430" height="320" src="https://www.youtube.com/embed/OPlvskVHtbg?start=60" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    </div>
+</section>
 </body>
 
 </html>
