--- a/public/campeoes/aphelios.html
+++ b/public/campeoes/aphelios.html
@@ -14,8 +14,11 @@
             <div class="container">
                 <ul>
                     <li><a href="../index.html"><img src="../assets/img/mt_targon_emblem.png" style="width: 100px;" alt=""></a></li>
-                    <li><a href="../cadastro.html">Cadastro</a></button>
-                    <li><a href="../login.html">Login</a></li>
+                    <div class="usuario_opcao">
+                        <li><button onclick="mudarPaginaProjeto()">Sobre o Projeto</button></li>
+                        <li><button onclick="mudarPaginaCadastro()">Cadastro</button></button>
+                        <li><button onclick="mudarPaginaLogin()">Login</button></li>
+                    </div>
                 </ul>
             </div>
         </nav>
@@ -72,7 +75,20 @@
         </DIV>
             <button onclick="lerMais()" id="btnLerMais">Ler mais</button>
     </section>
-    
+    <br><br>
+    <section class="section_historia_auxiliar">
+        <div class="titulo_personagens">
+            <h1>Videos & contos</h1>
+        </div>  
+        <br><br>
+        <div class="Videos">
+            <iframe width="430" height="320" src="https://www.youtube.com/embed/YbV7I0bDaOk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+            <iframe width="430" height="320" src="https://www.youtube.com/embed/0Da8g7_nFeo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+            <iframe width="430" height="320" src="https://www.youtube.com/embed/iAOHXjebrs4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
+    </section>
 </body>
 </html>
 
