--- a/public/login.html
+++ b/public/login.html
@@ -15,8 +15,9 @@
                 <ul>
                     <li><a href="index.html"><img src="assets/img/mt_targon_emblem.png" style="width: 100px;" alt=""></a></li>
                     <div class="usuario_opcao">
-                        <li><a href="cadastro.html">Cadastro</a></button>
-                        <li><a href="login.html">Login</a></li>
+                        <li><button onclick="mudarPaginaProjeto()">Sobre o Projeto</button></li>
+                        <li><button onclick="mudarPaginaCadastro()">Cadastro</button></button>
+                        <li><button onclick="mudarPaginaLogin()">Login</button></li>
                     </div>
                 </ul>
             </div>
