ultimas configs campeoes e quiz

--- a/public/campeoes/Diana.html
+++ b/public/campeoes/Diana.html
@@ -110,7 +110,7 @@
                     Embora seu destino permaneça incerto, Diana trilhará esse caminho, custe o que custar.</span>
             </p>
         </DIV>
-        <button onclick="lerMais()" id="btnLerMais">Ler mais</button>
+        <button onclick="lerMais()" id="btnLerMais" class="btnLerMais">Ler mais</button>
     </section>
     <br><br>
     <section class="section_historia_auxiliar">
