--- a/public/campeoes/Leona.html
+++ b/public/campeoes/Leona.html
@@ -110,7 +110,7 @@
                     amiga a controlar o poder do Aspecto da Lua antes que ele a destrua.</span>
             </p>
         </DIV>
-        <button onclick="lerMais()" id="btnLerMais">Ler mais</button>
+        <button onclick="lerMais()" id="btnLerMais" class="btnLerMais">Ler mais</button>
     </section>
     <br><br>
     <section class="section_historia_auxiliar">
