--- a/public/campeoes/Zoe.html
+++ b/public/campeoes/Zoe.html
@@ -100,7 +100,7 @@
                     transformações que podem resultar em caos, destruição e sangue.</span>
             </p>
         </DIV>
-        <button onclick="lerMais()" id="btnLerMais">Ler mais</button>
+        <button onclick="lerMais()" id="btnLerMais" class="btnLerMais">Ler mais</button>
     </section>
     <br><br>
     <div class="Videos">
