--- a/public/campeoes/aphelios.html
+++ b/public/campeoes/aphelios.html
@@ -73,7 +73,7 @@
                 
                 Agora que o equilíbrio do poder de Targon está mudando e que os Solari sabem que os Lunari resistirão, Aphelios e Alune serão ainda mais necessários.</span></p>
         </DIV>
-            <button onclick="lerMais()" id="btnLerMais">Ler mais</button>
+            <button onclick="lerMais()" id="btnLerMais" class="btnLerMais">Ler mais</button>
     </section>
     <br><br>
     <section class="section_historia_auxiliar">
