--- a/public/campeoes/Aurelion.html
+++ b/public/campeoes/Aurelion.html
@@ -60,7 +60,7 @@
                     
                     Movido pela tentadora promessa de liberdade e vingança, Aurelion Sol agora espreita Runeterra com uma eterna fúria fervilhante. Certamente será aqui, sobre este mundo, que o equilíbrio cósmico penderá a seu favor uma vez mais, e o universo testemunhará o destino daqueles que ousaram roubar o poder de um forjador de estrelas.</span></p>
         </DIV>
-            <button onclick="lerMais()" id="btnLerMais">Ler mais</button>
+            <button onclick="lerMais()" id="btnLerMais" class="btnLerMais">Ler mais</button>
     </section>
     <br><br>
     <section class="section_historia_auxiliar">
