--- a/public/campeoes/Pantheon.html
+++ b/public/campeoes/Pantheon.html
@@ -112,7 +112,7 @@
                     Agora que o divino Pantheon não existia mais, a Guerra renasceria em um homem.</span>
             </p>
         </DIV>
-        <button onclick="lerMais()" id="btnLerMais">Ler mais</button>
+        <button onclick="lerMais()" id="btnLerMais" class="btnLerMais">Ler mais</button>
     </section>
     <br><br>
     <section class="section_historia_auxiliar">
