--- a/public/campeoes/Soraka.html
+++ b/public/campeoes/Soraka.html
@@ -98,7 +98,7 @@
                     Mesmo assim, Soraka está determinada a nunca parar de tentar.</span>
             </p>
         </DIV>
-        <button onclick="lerMais()" id="btnLerMais">Ler mais</button>
+        <button onclick="lerMais()" id="btnLerMais" class="btnLerMais">Ler mais</button>
     </section>
     <br><br>
     <section class="section_historia_auxiliar">
