--- a/public/campeoes/Taric.html
+++ b/public/campeoes/Taric.html
@@ -106,7 +106,7 @@
                     inteiro.</span>
             </p>
         </DIV>
-        <button onclick="lerMais()" id="btnLerMais">Ler mais</button>
+        <button onclick="lerMais()" id="btnLerMais" class="btnLerMais">Ler mais</button>
     </section>
     <br><br>
     <div class="Videos">
