--- a/public/cadastro.html
+++ b/public/cadastro.html
@@ -41,18 +41,18 @@
                 <label for="psw-repeat"><b>Repita a senha</b></label>
                 <input type="password" placeholder="Repita a senha" id="psw_repeat" required>
                 
-                <!-- <label for="champ_fav"><b>Campeão favorito</b></label>
+                <label for="champ_fav"><b>Campeão favorito</b></label>
                 <select id="champion_fav" required>
                     <option value="">Selecione um Campeão</option>
-                    <option value="Aphelios"> Aphelios </option>
-                    <option value="Aurelion Sol"> Aurelion Sol</option>
-                    <option value="Diana"> Diana </option>
-                    <option value="Leona"> Leona </option>
-                    <option value="Pantheon"> Pantheon </option>
-                    <option value="Soraka"> Soraka</option>
-                    <option value="Taric"> Taric </option>
-                    <option value="Zoe"> Zoe </option>
-                </select><hr> -->
+                    <option value="1"> Aphelios </option>
+                    <option value="2"> Aurelion Sol</option>
+                    <option value="3"> Diana </option>
+                    <option value="4"> Leona </option>
+                    <option value="5"> Pantheon </option>
+                    <option value="6"> Soraka</option>
+                    <option value="7"> Taric </option>
+                    <option value="8"> Zoe </option>
+                </select><hr> 
 
                 <label>
                     <input type="checkbox" checked="checked" name="remember" style="margin-bottom:15px"> Remember me
